Fixed images too tall for image card

--- a/src/client/volunteer/styles/sass/home-page.scss
+++ b/src/client/volunteer/styles/sass/home-page.scss
@@ -89,6 +89,7 @@
     text-align: center;
     .image-card-image {
       max-width: 100%;
+      max-height: 100%;
       flex-grow: 0;
     }
   }
